--- a/plugins/settings/index.html
+++ b/plugins/settings/index.html
@@ -12,79 +12,77 @@
 <!-- 引入组件库 -->
 <script src="https://unpkg.com/element-ui/lib/index.js"></script>
   <style>
+    #app {
+      height: 100vh;
+      overflow: hidden;
+    }
+    .aside {
+      height: 100%;
+      overflow: auto;
+    }
+    .main {
+      height: 100%;
+      overflow: auto;
+    }
     .setting-item.selected {
       background: #3B82F6;
       color: white;
     }
-    /* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 20px;
-}
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
+    /* The slider */
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
 
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 14px;
+      width: 14px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 14px;
-  width: 14px;
-  left: 3px;
-  bottom: 3px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
 
-input:checked + .slider {
-  background-color: #2196F3;
-}
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
+    input:checked + .slider:before {
+      -webkit-transform: translateX(20px);
+      -ms-transform: translateX(20px);
+      transform: translateX(20px);
+    }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(20px);
-  -ms-transform: translateX(20px);
-  transform: translateX(20px);
-}
+    /* Rounded sliders */
+    .slider.round {
+      border-radius: 34px;
+    }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
+    .slider.round:before {
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body>
   <div id="app" class="flex">
     <div class="aside w-48">
       <ul class="setting-list text-center border-r h-screen">
-        <li class="setting-item h-12 flex items-center justify-center"
+        <li class="setting-item h-12 flex items-center justify-center cursor-pointer"
           v-for="(label, keyName) in views"
           :key="keyName"
           :class="{selected: curView === keyName}"
@@ -114,12 +112,18 @@ input:checked + .slider:before {
               <h3 class="text-base">{{plugin.title}}</h3>
               <h5 class="text-gray-400 text-xs mt-1">{{plugin.subtitle}}</h5>
             </div>
-            <!-- <div class="suffix ml-auto flex items-center">
+            <div class="suffix ml-auto flex items-center">
               <el-button type="danger" icon="el-icon-delete"
                 size="mini"
                 @click="onRemovePluginClick(index, plugin)"
                 circle></el-button>
-            </div> -->
+              <el-button type="text"
+                size="mini"
+                @click="onRemovePluginClick(index, plugin)"
+                circle>
+                <i class="el-icon-more"></i>
+              </el-button>
+            </div>
           </li>
         </ul>
       </div>
