feat: 修改settings插件，重新梳理设置和插件注册逻辑

--- a/plugins/settings/index.html
+++ b/plugins/settings/index.html
@@ -94,7 +94,7 @@
         <ul class="shortcut-list my-4">
           <li class="shortcut-item flex items-center">
             <div class="w-48 text-right mr-6">开机启动</div>
-            <el-switch v-model="settings.autoLaunch" @change="onAutoLaunchChange"></el-switch>
+            <el-switch v-model="settings.launchAtLogin" @change="onLaunchAtLoginChange"></el-switch>
           </li>
         </ul>
       </div>
