feat: 修复一些问题

--- a/render/public/index.html
+++ b/render/public/index.html
@@ -9,6 +9,8 @@
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
 	<script src="./zepto.min.js"></script>
 	<script defer src='./build/bundle.js'></script>
