--- a/plugins/settings/index.html
+++ b/plugins/settings/index.html
@@ -5,12 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>设置</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.3/tailwind.min.css" integrity="sha512-wl80ucxCRpLkfaCnbM88y4AxnutbGk327762eM9E/rRTvY/ZGAHWMZrYUq66VQBYMIYDFpDdJAOGSLyIPHZ2IQ==" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <!-- 引入样式 -->
-<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-<!-- 引入组件库 -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <link rel="stylesheet" href="./lib/tailwind.min.css">
+  <link rel="stylesheet" href="./lib/element-ui.css">
+  
+  <script src="./lib/vue.js"></script>
+  <script src="./lib/element-ui.js"></script>
   <style>
     #app {
       height: 100vh;
