--- a/plugins/settings/settings.html
+++ b/plugins/settings/settings.html
@@ -162,6 +162,6 @@
       </div>
     </div>
   </div>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./settings.js"></script>
 </body>
 </html>
