--- a/plugins/settings/public/settings.html
+++ b/plugins/settings/public/settings.html
@@ -11,6 +11,9 @@
   <script src="../lib/vue.js"></script>
   <script src="../lib/element-ui.js"></script>
   <style>
+    :root {
+      color-scheme: light dark;
+    }
     #app {
       height: 100vh;
       overflow: hidden;
